Add HTML structure for the choices

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     </head>
 
     <body>
+        <ul id="choices">
+            <li id="rock"><button>Rock</button></li>
+            <li id="paper"><button>Paper</button></li>
+            <li id="scissors"><button>Scissors</button></li>
+        </ul>
+
         <script src="main.js"></script>    
     </body>
 </html>
