--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li id="scissors"><button>Scissors</button></li>
         </ul>
 
+        <div id="result"></div>
+
         <script src="main.js"></script>    
     </body>
 </html>
