Fix ids of the choice buttons
The event.target.id method returns undefined because the button doesn't
have an id.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <body>
         <ul id="choices">
-            <li id="rock"><button>Rock</button></li>
-            <li id="paper"><button>Paper</button></li>
-            <li id="scissors"><button>Scissors</button></li>
+            <li><button id="rock">Rock</button></li>
+            <li><button id="paper">Paper</button></li>
+            <li><button id="scissors">Scissors</button></li>
         </ul>
 
         <div id="result"></div>
