--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <li><button id="scissors">Scissors</button></li>
         </ul>
 
-        <div id="result"></div>
+        <div id="round-result"></div>
+
+        <div id="game-result"></div>
 
         <script src="main.js"></script>    
     </body>
