Modify HTML structure for game over modal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 
         <div id="round-result"></div>
 
-        <div id="game-result"></div>
+        <div id="game-over" class="modal hidden">
+            <div class="modal-box">
+                <p id="game-over-msg"></p>
+                <button id="restart-btn">Play Again</button>
+            </div>
+        </div>
+
+        <div class="overlay hidden"></div>
 
         <script src="main.js"></script>    
     </body>
