--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
         <title>Rock Paper Scissors!</title>
     </head>
 
     <body>
-        <ul id="choices">
-            <li><button id="rock">Rock</button></li>
-            <li><button id="paper">Paper</button></li>
-            <li><button id="scissors">Scissors</button></li>
-        </ul>
-
-        <div id="round-result"></div>
+        <div class="container">
+            <p class="title">Rock, Paper, Scissors, Shoot!</p>
+            <ul id="choices">
+                <li><button id="rock" class="choice-btn">Rock</button></li>
+                <li><button id="paper" class="choice-btn">Paper</button></li>
+                <li><button id="scissors" class="choice-btn">Scissors</button></li>
+            </ul>
+            
+            <div id="round-result"></div>
+        </div>
 
         <div id="game-over" class="modal hidden">
             <div class="modal-box">
